Geary buttons no longer get clipped. Fixes #5

--- a/src/gtk-3.0/3.22/gtk-dark-compact.css
+++ b/src/gtk-3.0/3.22/gtk-dark-compact.css
@@ -4558,6 +4558,10 @@ button.title label {
   margin-right: -5px;
 }
 
+dialog.background > box.dialog-vbox > box.dialog-action-box > buttonbox.dialog-action-area {
+  padding: 12px;
+}
+
 /*********
  * Tilix *
  *********/
