--- a/src/gtk-3.0/3.22/sass/apps/_gnome.scss
+++ b/src/gtk-3.0/3.22/sass/apps/_gnome.scss
@@ -847,3 +847,8 @@ button.title label { min-height: $medium_size; }
 
   &:dir(rtl) { margin-right: -5px; }
 }
+
+// fix clipped dialog buttons
+dialog.background > box.dialog-vbox > box.dialog-action-box > buttonbox.dialog-action-area {
+  padding: 12px;
+}
